--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/artsy/multienv#readme",
   "devDependencies": {
+    "@artsy/auto-config": "^1.1.0",
     "@types/node": "^14.17.5",
     "typescript": "^4.4.3"
   },
