--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "scripts": {
     "clean": "rm -rf dist/",
     "compile": "tsc",
-    "prepublish": "yarn clean && yarn compile",
+    "prepublish": "yarn test && yarn clean && yarn compile",
     "release": "auto shipit",
-    "test": "echo \"Error: no test specified\""
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -34,7 +34,11 @@
   "homepage": "https://github.com/artsy/multienv#readme",
   "devDependencies": {
     "@artsy/auto-config": "^1.1.0",
+    "@types/jest": "^27.0.2",
     "@types/node": "^14.17.5",
+    "jest": "^27.2.4",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
   "dependencies": {
